<resources>
    <string name="app_name">LawOfAttractionPro</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="langEng">English</string>
    <string name="langFre">français (French) </string>
    <string name="langcSpa">español (Spanish) </string>
    <string name="langJap">日本語 (Japanese) </string>
    <string name="langDut">Nederlands (Dutch) </string>
    <string name="langTha">ภาษาไทย (Thai) </string>
    <string name="langGer">Deutsch (German) </string>
    <string name="langPort">português (Portuguese) </string>
    <string name="langItalian">italiano (Italian) </string>
    <string name="langHin">हिन्दी (Hindi)</string>
    <string name="intro1">What are you Manifesting ?</string>
    <string name="intro2">Choose Your Language</string>
    <string name="intro3">CONTINUE</string>
    <string name="title_activity_feedback">feedback</string>
    <string name="choose_language">Choose Your Language</string>
    <string name="langcontinue">CONTINUE</string>
    <string name="value">Money</string>
    <string name="value1">Home</string>
    <string name="value2">Love</string>
    <string name="value3">Car</string>
    <string name="value4">Happiness</string>
    <string name="value5">Health</string>
    <string name="value6">Job</string>
    <string name="value7">Other Manifestation</string>
    <string name="loading_msg">Loading.....</string>
    <string name="noInternet_txt">Not connected to Internet</string>
    <string name="enterName">Please Enter Your Name</string>
    <string name="enterWish">Please Enter Your Wish</string>
    <string name="nameError">Name Cannot be more than 25 characters</string>
    <string name="nameError1">Name Cannot be  less than 3 characters</string>
    <string name="nameError2">Please enter appropriate name, or remove any obscene word from Name field</string>
    <string name="nameError3">No Digits or special symbols allowed in Name field</string>
    <string name="nameError4">Something went wrong</string>
    <string name="nwError">Network Unstable.. Scroll down to refresh</string>
    <string name="thankYou"> Thank You For Your Feedback !</string>
    <string name="Home_title">HOME</string>
    <string name="Home_subTitle">LAW OF ATTRACTION \n DAILY</string>
    <string name="Home_textBelowPager">Click Start to begin</string>
    <string name="Home_textBelowPager1">Hey </string>
    <string name="Home_textBelowPager2">, Let\'s Begin..</string>
    <string name="Home_startButtonText">START</string>
    <string name="Home_myStories">My Stories</string>
    <string name="Home_sayToUniverse">Say to Universe</string>
    <string name="Home_sayThankYou">Say Thank You !</string>
    <string name="Home_settings">Settings</string>
    <string name="Home_getProBannerText">CLICK HERE TO DISABLE ADS </string>
    <string name="Home_Notification">, It\'s Time To Manifest Your Dreams !!"</string>
    <string name="Home_clickToStart">CLICK TO START</string>
    <string name="Home_pray">You Prayed For \t </string>
    <string name="subUniverse_buttonText">SUBMIT TO UNIVERSE</string>
    <string name="subUniverse_getPro">View My Private Wish</string>
    <string name="subUniverse_dialogTitle">Share Your Manifestation</string>
    <string name="subUniverse_dialogName">Name</string>
    <string name="subUniverse_dialogWish">Wish</string>
    <string name="subUniverse_dialogSubmit">SUBMIT</string>
    <string name="subUniverse_dialogCancel">Cancel</string>
    <string name="refresh_text">Scroll Down to refresh</string>
    <string name="myStory_buttonText">SHARE EXPERIENCE</string>
    <string name="myStory_dialogTitle">Share Your Manifestation Story</string>
    <string name="myStory_dialogName">Name</string>
    <string name="myStory_dialogStory">Your Story</string>
    <string name="myStory_dialogSubmit">SUBMIT</string>
    <string name="myStory_dialogCancel">Cancel</string>
    <string name="myStory_exp">Please Share Your Experience"</string>
    <string name="myStory_warn">Don\'t post any sensitive information"</string>
    <string name="nav_header_title">Law Of Attraction</string>
    <string name="nav_header_subtitle">Turn Your Dreams into Reality !!</string>
    <string name="navigation_drawer_info">What is Law Of Attraction</string>
    <string name="navigation_drawer_tips">5 Tips to Manifest Faster</string>
    <string name="navigation_drawer_music">Mind Relaxing Music</string>
    <string name="navigation_drawer_quote">Quote of the Day</string>
    <string name="navigation_drawer_story">Inspiring Stories</string>
    <string name="navigation_drawer_progress">Track Progress</string>
    <string name="navigation_drawer_life">Life is Exciting</string>
    <string name="navigation_drawer_language">Change Language</string>
    <string name="navigation_drawer_spread">Spread the word</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_drawer_mail">Drop a Mail</string>
    <string name="navigation_drawer_pro">Get Pro Version ( No Ads )</string>
    <string name="navigation_drawer_about">About the App</string>
    <string name="navigation_drawer_share">Share the App</string>
    <string name="navigation_drawer_rate">Rate us</string>
    <string name="navigation_drawer_feedback">Send Feedback</string>
    <string name="navigation_drawer_privacy">Privacy Policy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Get PRO Version ( No ADS )</string>
    <string name="start_text">START</string>
    <string name="skip_text">SKIP</string>
    <string name="next_text">NEXT</string>
    <string name="done_text">DONE</string>
    <string name="stopManifestation_text">Do you want to Stop your Manifestation Exercise?</string>
    <string name="Yes_text">YES</string>
    <string name="No_text">NO</string>
    <string name="Exit_Text">Do you want to Exit?</string>
    <string name="event_add">"Manifestation added to your Progress Tracker"</string>
    <string name="chooseToShare">"Choose Where to share"</string>
    <string name="activity1_text1">RELAX YOUR MIND</string>
    <string name="activity1_text2">Before proceeding make sure you relax your mind</string>
    <string name="activity1_text3">Sit in a quiet place where there is no distraction</string>
    <string name="activity1_text4">Take a Deep Breath</string>
    <string name="activity1_text5">Close your eyes slowly</string>
    <string name="activity1_text6">After closing your eyes focus on your breathing for next 60 seconds</string>
    <string name="activity2_text1">WISH WHAT YOU NEED</string>
    <string name="activity2_text2">The Universe is abundant to serve everyone\'s need</string>
    <string name="activity2_text3">All you need is to wish for it</string>
    <string name="activity2_text4">Now think about what all you need in your life eg - a car , a house, money etc</string>
    <string name="activity2_text5">Be clear about what you want, don\'t doubt about it</string>
    <string name="activity2_text6">Write down your wishlist if required</string>
    <string name="activity3_text1">VISUALIZE YOUR DREAMS</string>
    <string name="activity3_text2">Every invention was once a idea that was visualized</string>
    <string name="activity3_text3">Humans have the potential to visualize anything they want</string>
    <string name="activity3_text4">If you wish a car, visualize yourself driving it on your favourite route</string>
    <string name="activity3_text5">Visualization helps us to manifest our wish faster</string>
    <string name="activity3_text6">Before going to bed, close your eyes and visualize that your dreams have come true</string>
    <string name="activity4_text1">SHOW GRATITUDE</string>
    <string name="activity4_text2">You won\'t be happy with more until you are happy with what you have got</string>
    <string name="activity4_text3">Feel gratitude for what you have</string>
    <string name="activity4_text4">Being grateful has power to block out negative emotions and to send positive energy in the universe</string>
    <string name="activity4_text5">Make gratitude a daily habit and you will end up having more..</string>
    <string name="activity5_text1">TRUST THE UNIVERSE</string>
    <string name="activity5_text2">All you need is trust and patience</string>
    <string name="activity5_text3">The pace of Nature is slow but it is worthy !</string>
    <string name="activity5_text4">A seed won\'t turn into a plant instantly, patience and consistency is the key</string>
    <string name="activity5_text5">Don\'t get upset if these things don\'t happen immediately</string>
    <string name="activity5_text6">Practice all the steps everyday ,until you manifest your dream</string>
    <string name="activity6_text1">CONGRATULATIONS !</string>
    <string name="activity6_text2">You have done Today\'s manifestation</string>
    <string name="activity6_text3">You Manifested for </string>
    <string name="activity6_text4">Track Progress</string>
    <string name="activity6_text5">Home</string>
    <string name="activity6_text6">Share our App</string>
    <string name="activity6_text7">Seconds</string>
    <string name="activityTracker_text1">ACTIVITY</string>
    <string name="activityTracker_text2">TRACKER</string>
    <string name="activityTracker_text3">TRACK BY DATE</string>
    <string name="activityTracker_text4">Trust the Universe ! you are so close to your dreams </string>
    <string name="activityTracker_text5">Manifestation Done on</string>
    <string name="activityQuote_text1">QUOTE OF THE DAY</string>
    <string name="activityQuote_text2">One small positive thought can change your whole day</string>
    <string name="LIKE_text">LIKE</string>
    <string name="SHARE_text">SHARE</string>
    <string name="activityQuote_text3">Have some good lines to share ?</string>
    <string name="activityQuote_text4">SEND US YOUR QUOTES</string>
    <string name="activityQuote_text5">View All Quotes</string>
    <string name="LIKED_text">LIKED</string>
    <string name="activityQuote_share">Share Your Quotes</string>
    <string name="activityQuote_quoteText">Quote</string>
    <string name="activityQuote_quote">Please Enter Your Quote</string>
    <string name="activityQuote_quoteLimit">Quotes should be less than 130 characters</string>
    <string name="activityQuote_quoteThank">Thank you for submitting your quote</string>
    <string name="activityQuote_quoteshare">Get more inspirational quotes on Law of attraction daily app, Download Now From Play Store "</string>
    <string name="activityTimer_text1">SET TIMER</string>
    <string name="activityTimer_text2">Set Timer</string>
    <string name="activityTimer_text3">Timer is off</string>
    <string name="on_text">ON</string>
    <string name="off_text">OFF</string>
    <string name="seconds_text">seconds</string>
    <string name="timer_text">Please Enter Valid Seconds</string>
    <string name="timer_set">Time Set</string>
    <string name="timer_enable">Please Enable Timer</string>
    <string name="timer_on">Timer is enabled</string>
    <string name="timer_off">Timer is disabled</string>
    <string name="activityReminder_text1">SET REMINDER</string>
    <string name="activityReminder_text2">SET NOTIFICATION</string>
    <string name="activityReminder_text3">SET REMINDER</string>
    <string name="noti_enable">Please Enable Notifications</string>
    <string name="noti_daily">Daily Reminder Set</string>
    <string name="noti_disabletext">Notifications are disabled</string>
    <string name="noti_enableText">Notifications are enabled</string>
    <string name="activity_info">WHAT IS LAW OF ATTRACTION</string>
</resources>