<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232635"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.apps.amit.lawofattractionpro.calendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/activityTracker_text1"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="38sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0"
        >

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/activityTracker_text2"
            android:textAlignment="center"
            android:textColor="#f7dc6f"
            android:textSize="42sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_weight="4"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_weight=".5">

        <Button
            android:id="@+id/caltrack"
            android:layout_weight=".5"
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:text="@string/activityTracker_text3"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buton"
            android:fontFamily="@font/abeezee"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutshare"
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">



        <ImageView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:scaleX="1"

            android:layout_height="match_parent"
            android:src="@drawable/crop"/>

    </LinearLayout>

</LinearLayout>
